--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
