--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-vis": "^1.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
